final commit. site functional and styled.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -58,8 +58,57 @@ li {
   margin-left: 15px;
   font-size: 40px; }
 
+.addGeet {
+  font-family: 'Quicksand', sans-serif;
+  color: white; }
+
+button {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 25px;
+  color: white;
+  background-color: #FE586B;
+  border: 1px solid #CBFEFE;
+  height: 160px; }
+
+.geetar {
+  height: 600px;
+  width: 600px;
+  margin-left: 405px; }
+
+.wowzer {
+  text-align: center;
+  color: white;
+  font-family: 'Quicksand', sans-serif; }
+
+.yayzer {
+  text-align: center;
+  color: white;
+  font-family: 'Quicksand', sans-serif; }
+
+#delete {
+  float: right;
+  margin-right: 30px;
+  background-color: #66D9EF;
+  color: #FE586B;
+  border: 1px solid #FE586B;
+  border-radius: 5px;
+  padding: 4px;
+  margin-bottom: 5px;
+  cursor: pointer; }
+
 footer {
   clear: both;
   height: 100px;
   background-color: #FE586B;
   margin-top: 15px; }
+
+.footSpan {
+  color: white;
+  font-family: 'Quicksand', sans-serif;
+  margin-left: 5px;
+  margin-top: 15px;
+  font-size: 15px; }
+
+.socMed {
+  margin-left: 5px;
+  margin-top: 50px; }
